--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "mysql": "^2.18.1",
-    "mysql2": "^3.6.2"
+    "mysql2": "^3.6.2",
+    "nodemailer": "^6.9.7",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
